Added 1 more link to projects

--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Joakim Edkvist</title>
   </head>
   <body>
-    <ol>
+    <h1>Projects by Joakim Edkvist</h1>
+    <ul>
       <li>
-        <a href="https://joakimedkvist.github.io/currencys-vue3/#/"
-          >Recent Currency Project in Vue 3 with Vite</a
+        <a href="https://joakimedkvist.github.io/doctor-squeeze"
+          >WebbShop for Stressballs! GroupProject in Vue 3 with Vite from Feb
+          2022. [Vue3, Vuex, Bootstrap, Multiple NPM packages]</a
         >
       </li>
       <li>
-        <a href="https://joakimedkvist.github.io/vanilla.js-currencies/"
-          >Vanilla JS project around Currencies</a
+        <a href="https://joakimedkvist.github.io/currencys-vue3"
+          >Currency SoloProject in Vue 3 with Vite from Jan 2022. [Vue3, Vuex,
+          Bootstrap ]</a
         >
       </li>
-    </ol>
+      <li>
+        <a href="https://joakimedkvist.github.io/vanilla.js-currencies"
+          >Currency Comparison with in Vanilla JS SoloProject from Nov 2021.
+          [Carousel, LocalStorage, Chart.JS ]</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
