fixed bug with chrome browser

--- a/index.html
+++ b/index.html
@@ -59,32 +59,28 @@
           src="https://cdn.glitch.com/d558c128-2ed0-4284-a0da-4d18b9163ad6%2Fasteroides.glb?1541106805090"
         ></a-asset-item>
       </a-assets>
-
-
-
-
-
   <a-entity
         id="asteroid-belt"
         gltf-model="#asteroids"
         scale="2.1 2.1 2.1"
         position="0 0 0"
         mixin="rotation"
-
         animation="dur: 80000;"
       ></a-entity>
     </a-scene>
+    <!--CONTENT-->
     <main class="container">
       <div class="card introduction">
         <div class="row g-3">
-          <div class="col-md-2 portrait-bg">
+          <div class="col-md-5  col-lg-2 portrait-bg">
             <img
               src="./images/blackjoakim.png"
-              class="img-fluid rounded position-relative top-50 start-50 translate-middle"
+              style="width: 100%;"
+              class="rounded position-relative top-50 start-50 translate-middle"
               alt="portait of Joakim"
             />
           </div>
-          <div class="col-md-10">
+          <div class="col-md-7 col-lg-10">
             <div class="card-body">
               <h5 class="card-title">Welcome to my Portfolio!</h5>
               <h6>My name is Joakim I'm a Front End Developer Student</h6>
