--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
       <div class="card-group shadow p-3 mb-5 bg-body rounded ">
         <a href="https://joakimedkvist.github.io/doctor-squeeze">
         <div class="card bg-dark text-white">
-          <div style="display: flex">
+          <div style="display: flex;">
             <img
               src="images/doctor1thumb.png"
               class="card-img-top"
@@ -100,8 +100,7 @@
               <ul>
                 <li>Fetching data from API</li>
                 <li>LocalStorage</li>
-                <li>NPM packages like
-                Splide & Chart.js</li>
+                <li>Data & States Management</li>
               </ul>
             </p>
             <p class="card-text"><u>Click to view</u></p>
